--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; // prevents horizontal scroll from overflowing content
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -54,9 +62,15 @@ p, a, h1, h2, h3, h4, h5, label, button {
   }
 }
 
-.navigation-bar-responsive {
-  span, p {
-    color: #0d1116;
+.navigation-bar-responsive-dark {
+  span, p,li {
+    color: #ffffff;
+    font-family: "Lato", sans-serif;
+  }
+}
+.navigation-bar-responsive-light{
+  span, p,li {
+    color: #000000;
     font-family: "Lato", sans-serif;
   }
 }
@@ -105,9 +119,12 @@ p, a, h1, h2, h3, h4, h5, label, button {
 .light-mode {
   background-color: #f8f9fa;
 
-  .navigation-bar {
+  .navigation-bar ,  .navigation-bar-responsive {
     background-color: #f8f9fa;
   }
+
+ 
+  
   .educationCard{
     background-color: white;
 }
@@ -163,6 +180,15 @@ p, a, h1, h2, h3, h4, h5, label, button {
   @media (max-width: 768px) {
     .items-container {
       padding: 5% 5%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .items-container {
+      padding: 3% 3%;
+    }
+    body{
+      width: auto;
     }
   }
 }
